--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon app.js",
-    // "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
 
   },
   "keywords": [],
