--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start" : "node app.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
-    
+
   },
   "keywords": [],
   "author": "",
