--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
+    "moongoose": "0.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
