--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
     "moongoose": "0.0.5",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
