--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.5.1",
     "moongoose": "0.0.5",
     "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
