--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
+    "gridfs-stream": "^1.1.1",
     "http": "0.0.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.2.3",
