--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
+    "gridfs-stream": "^1.1.1",
     "http": "0.0.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
     "moongoose": "0.0.5",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
